# vigtra-be

./: LICENSE  justfile  pyproject.toml
docs/: API_DOCUMENTATION.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_SETUP.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  TESTING_GUIDE.md  improvements_recommend.md
docs/implementation/: DASHBOARD.md  REPORT.md
modules/calculation/: apps.py  cal_config.py  calculation.py
modules/core/: __init__.py  module_loader.py
