[project]
name = "vigtra"
version = "0.1.0"
description = "A better openimis"
authors = [
    {name = "Dawdaborje",email = "dawdaborjekujabi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "django>=5.2,<6.0",
    "djangorestframework>=3.16.0,<4.0.0",
    "graphene-django (>=3.2.3,<4.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "django-filter (>=25.1,<26.0)",
    "django-graphql-jwt>=0.4.0,<0.5.0",
    "django-passkeys (>=1.2.8.1,<2.0.0.0)",
    "django-axes[ipware] (>=8.0.0,<9.0.0)",
    "django-defender (>=0.9.8,<0.10.0)",
    "django-mptt (>=0.17.0,<0.18.0)",
    "django-lifecycle>=1.2.4,<2.0.0",
    "fhir-resources (>=8.0.0,<9.0.0)",
    "django-simple-history (>=3.8.0,<4.0.0)",
    "pillow>=11.3.0",
    "django-redis>=6.0.0",
    "django-guardian>=3.0.3",
    "faker>=37.4.0",
    "tablib>=3.8.0",
    "celery>=5.5.3",
    "django-celery-results>=2.6.0",
    "django-celery-beat>=2.8.1",
    "plotly>=6.2.0",
    "plotly-geo>=1.0.0",
    "kaleido>=1.0.0",
    "dash>=3.1.1",
    "pyaml>=25.7.0",
    "django-easy-audit>=1.3.7",
    "django-phonenumber-field>=8.1.0",
    "phonenumbers>=9.0.11",
    "channels[daphne]>=4.3.1",
    "django-eventstream[drf]>=5.3.2",
    "django-jazzmin>=3.0.1",
    "djangorestframework-api-key>=3.1.0",
    "django-health-check>=3.20.0",
    "django-debug-toolbar>=6.0.0",
    "django-split-settings>=1.3.2",
    "python-dotenv>=1.1.1",
    "django-socio-grpc>=0.25.0",
    "pyrefly>=0.44.1",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "polars>=1.41.2",
    "common-expression-language>=0.6.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]
